...
                TextButton(
                    onClick = {
                        showDatePicker = false
                        onDismiss()
                    },
                ) {
                    Text("Отмена")
                }
            },
        ) {
            DatePicker(state = datePickerState)
        }
    }
...
